fix token error
