# swagger.json
@@ -12,16 +12,6 @@
     "https"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/customers/": {
       "get": {
         "description": "",
@@ -58,7 +48,7 @@
                 "password": {
                   "example": "any"
                 },
-                "age": {
+                "dob": {
                   "example": "any"
                 },
                 "isActive": {
@@ -146,7 +136,7 @@
                 "password": {
                   "example": "any"
                 },
-                "age": {
+                "dob": {
                   "example": "any"
                 },
                 "isActive": {
@@ -237,28 +227,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/token/": {
-      "post": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/token/{id}": {
+      },
       "delete": {
         "description": "",
         "produces": [
@@ -266,7 +235,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "access_token",
             "in": "path",
             "required": true,
             "type": "string"
@@ -281,6 +250,25 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/token/": {
+      "post": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
